Pytorch wrapper for the CUDA implementation

--- a/pytorch/CMakeLists.txt
+++ b/pytorch/CMakeLists.txt
@@ -1,12 +1,14 @@
 cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 
 set(NAME NNPOpsPyTorch)
-project(${NAME})
+project(${NAME} LANGUAGES CXX CUDA)
 
 find_package(PythonLibs REQUIRED)
 find_package(Torch REQUIRED)
 
-add_library(${NAME} SHARED SymmetryFunctions.cpp ../ani/CpuANISymmetryFunctions.cpp)
+add_library(${NAME} SHARED SymmetryFunctions.cpp
+                           ../ani/CpuANISymmetryFunctions.cpp)
+                           ../ani/CudaANISymmetryFunctions.cu
 target_compile_features(${NAME} PRIVATE cxx_std_14)
 target_include_directories(${NAME} PRIVATE ${PYTHON_INCLUDE_DIRS})
 target_include_directories(${NAME} PRIVATE ../ani)
