--- a/pytorch/CMakeLists.txt
+++ b/pytorch/CMakeLists.txt
@@ -7,8 +7,8 @@ find_package(PythonLibs REQUIRED)
 find_package(Torch REQUIRED)
 
 add_library(${NAME} SHARED SymmetryFunctions.cpp
-                           ../ani/CpuANISymmetryFunctions.cpp)
-                           ../ani/CudaANISymmetryFunctions.cu
+                           ../ani/CpuANISymmetryFunctions.cpp
+                           ../ani/CudaANISymmetryFunctions.cu)
 target_compile_features(${NAME} PRIVATE cxx_std_14)
 target_include_directories(${NAME} PRIVATE ${PYTHON_INCLUDE_DIRS})
 target_include_directories(${NAME} PRIVATE ../ani)
