--- a/conda/nnpops-pytorch/meta.yaml
+++ b/conda/nnpops-pytorch/meta.yaml
@@ -32,13 +32,14 @@ requirements:
     - {{ compiler('cxx') }}
     - cmake
     - make
+  # Version specifications according to https://github.com/openmm/openmm-torch/issues/14
   host:
     - python
-    - pytorch
+    - pytorch >=1.5
   run:
     - python
-    - pytorch
-    - torchani
+    - pytorch >=1.5
+    - torchani >=2.2
 
 test:
   requires:
