--- a/conda/nnpops-pytorch/meta.yaml
+++ b/conda/nnpops-pytorch/meta.yaml
@@ -34,6 +34,7 @@ requirements:
     - make
   # Version specifications according to https://github.com/openmm/openmm-torch/issues/14
   host:
+    - cudatoolkit 10.2.*
     - cudnn # A buid dependency for PyTorch
     - python
     - pytorch >=1.5
