Add the about section to the conda recipe

--- a/conda/nnpops-pytorch/meta.yaml
+++ b/conda/nnpops-pytorch/meta.yaml
@@ -53,3 +53,9 @@ test:
   commands:
     - conda inspect linkages {{ name }}
     - cd pytorch && pytest TestSymmetryFunctions.py
+
+about:
+  home: https://github.com/peastman/NNPOps
+  license: MIT
+  license_file: LICENSE
+  summary: Optimized operations for the neural network potentials
