Package and run all the test files

--- a/conda/nnpops-pytorch/meta.yaml
+++ b/conda/nnpops-pytorch/meta.yaml
@@ -49,10 +49,10 @@ test:
     - pytest
   source_files:
     - pytorch/molecules
-    - pytorch/TestSymmetryFunctions.py
+    - pytorch/Test*.py
   commands:
     - conda inspect linkages {{ name }}
-    - cd pytorch && pytest TestSymmetryFunctions.py
+    - cd pytorch && pytest Test*.py
 
 about:
   home: https://github.com/peastman/NNPOps
