--- a/pytorch/CMakeLists.txt
+++ b/pytorch/CMakeLists.txt
@@ -10,9 +10,10 @@ find_package(Torch REQUIRED)
 
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH true)
 
-add_library(${LIBRARY} SHARED SymmetryFunctions.cpp
-                           ../ani/CpuANISymmetryFunctions.cpp
-                           ../ani/CudaANISymmetryFunctions.cu)
+add_library(${LIBRARY} SHARED BatchedNN.cpp
+                              SymmetryFunctions.cpp
+                              ../ani/CpuANISymmetryFunctions.cpp
+                              ../ani/CudaANISymmetryFunctions.cu)
 target_compile_features(${LIBRARY} PRIVATE cxx_std_14)
 target_include_directories(${LIBRARY} PRIVATE ${PYTHON_INCLUDE_DIRS})
 target_include_directories(${LIBRARY} PRIVATE ../ani)
