Pin cudatoolkit version

--- a/conda/nnpops-pytorch/meta.yaml
+++ b/conda/nnpops-pytorch/meta.yaml
@@ -37,6 +37,7 @@ requirements:
     - python
     - pytorch 1.7.* cuda*
   run:
+    - cudatoolkit 10.2.*
     - pytorch >=1.7 cuda*
     - torchani >=2.2
 
