--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,12 @@
-name: nnpops
 channels:
   - conda-forge
 dependencies:
   - cmake
-  - gxx_linux-64
+  - gxx_linux-64 <=10
   - make
   - mdtraj
+  - nvcc_linux-64
   - torchani 2.2
   - pytest
   - python 3.9
-  - pytorch 1.8.0
+  - pytorch-gpu 1.8.0
