--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,7 @@ find_package(Python REQUIRED)
 find_package(PythonLibs REQUIRED)
 find_package(Torch REQUIRED)
 
-#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH true)
-
-add_library(${LIBRARY} SHARED src/pytoch/SymmetryFunctions.cpp
+add_library(${LIBRARY} SHARED src/pytorch/SymmetryFunctions.cpp
                               src/ani/CpuANISymmetryFunctions.cpp
                               src/ani/CudaANISymmetryFunctions.cu)
 target_compile_features(${LIBRARY} PRIVATE cxx_std_14)
@@ -18,4 +16,4 @@ target_include_directories(${LIBRARY} PRIVATE ${PYTHON_INCLUDE_DIRS} src/ani)
 target_link_libraries(${LIBRARY} ${TORCH_LIBRARIES} ${PYTHON_LIBRARIES})
 
 install(TARGETS ${LIBRARY} DESTINATION ${Python_SITEARCH}/${NAME})
-install(FILES SymmetryFunctions.py DESTINATION ${Python_SITEARCH}/${NAME})
+install(FILES src/pytorch/SymmetryFunctions.py DESTINATION ${Python_SITEARCH}/${NAME})
