Exclude TestCuda* for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,4 +46,4 @@ jobs:
       run: |
         conda activate nnpops
         cd build
-        ctest --verbose
+        ctest --verbose --exclude-regex TestCuda
