--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,27 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        include:
+          - cuda: 10.2.89
+            nvcc: 10.2
+            python: 3.8
+            pytorch: 1.7.1
+          - cuda: 11.2.2
+            nvcc: 11.2
+            python: 3.9
+            pytorch: 1.8.0
 
     steps:
     - name: Check out
       uses: actions/checkout@v2
-    
+
     - name: Install CUDA Toolkit
       uses: Jimver/cuda-toolkit@v0.2.4
       with:
-        cuda: 11.2.2
+        cuda: ${{ matrix.cuda }}
 
     - name: Install Miniconda
       uses: conda-incubator/setup-miniconda@v2
@@ -27,17 +38,24 @@ jobs:
         auto-activate-base: true
         miniforge-variant: Mambaforge
 
+    - name: Set versions
+      run: sed -i -e "/cudatoolkit/c\  - cudatoolkit ${{ matrix.cuda }}"
+                  -e "/nvcc_linux-64/c\  - nvcc_linux-64 ${{ matrix.nvcc }}"
+                  -e "/python/c\  - python ${{ matrix.python }}"
+                  -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}"
+                  environment.yml
+
     - name: Install dependencies
       shell: bash -l {0}
-      run: mamba env create -n nnpops -f environment.yml
-    
+      run: conda env create -n nnpops -f environment.yml
+
     - name: Configure, compile, and install
       shell: bash -l {0}
       run: |
         conda activate nnpops
         mkdir build && cd build
         cmake .. \
-              -DTorch_DIR=$CONDA_PREFIX/lib/python3.9/site-packages/torch/share/cmake/Torch \
+              -DTorch_DIR=$CONDA_PREFIX/lib/python${{ matrix.python }}/site-packages/torch/share/cmake/Torch \
               -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX
         make install
 
