--- a/environment.yml
+++ b/environment.yml
@@ -2,10 +2,11 @@ channels:
   - conda-forge
 dependencies:
   - cmake
+  - cudatoolkit 11.2.2
   - gxx_linux-64 <=10
   - make
   - mdtraj
-  - nvcc_linux-64
+  - nvcc_linux-64 11.2
   - torchani 2.2
   - pytest
   - python 3.9
