Set the oldest and latest dependeny versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,13 @@ jobs:
     strategy:
       matrix:
         include:
+          # Oldest supported versions
           - cuda: 10.2.89
             gcc: 8.5.0
             nvcc: 10.2
-            python: 3.8
+            python: 3.7
             pytorch: 1.8.0
+          # Latest supported versions
           - cuda: 11.2.2
             gcc: 10.3.0
             nvcc: 11.2
