Update to TorchANI 2.2.2 (#35)
* Update to TorchANI 2.2.1

* Update to PyTorch 1.10

* Add sysroot

* Fix a varialbe name

* Convert TorchANIBatchedNN to a ModuleList

* Circument TorchANI issue

* Set the oldest and latest dependeny versions

* Set the minimum CMake version

* Set Python 3.8 as a minimum version

* Update to TorchANI 2.2.2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,18 @@ jobs:
     strategy:
       matrix:
         include:
+          # Oldest supported versions
           - cuda: 10.2.89
             gcc: 8.5.0
             nvcc: 10.2
             python: 3.8
-            pytorch: 1.7.1
+            pytorch: 1.8.0
+          # Latest supported versions
           - cuda: 11.2.2
             gcc: 10.3.0
             nvcc: 11.2
             python: 3.9
-            pytorch: 1.8.0 # Cannot test with PyTorch 1.9, because of https://github.com/aiqm/torchani/issues/598
+            pytorch: 1.10.0
 
     steps:
     - name: Check out
