--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,14 @@
 channels:
   - conda-forge
 dependencies:
-  - cmake
+  - cmake >=3.20
   - cudatoolkit 11.2.2
   - gxx_linux-64 10.3.0
   - make
   - mdtraj
   - nvcc_linux-64 11.2
-  - torchani 2.2
+  - torchani 2.2.2
   - pytest
   - python 3.9
-  - pytorch-gpu 1.8.0
+  - pytorch-gpu 1.10.0
+  - sysroot_linux-64 2.17
