PyTorch wrapper for SchNet operations (#40)
* Initial PyTorch wrapper for CFConv

* Add a PyTorch wrapper for CFConvNeighbors

* Add tests for TestCFConvNeighbors

* Complete CFConv wrapper

* Fix the CFConv wrapper

* Improve CFConvNeighbors tests

* Add initial CFConv tests

* Simplify CFConvNeighbors wrapper

* More simplify and fix CFConvNeighbors

* Add the header for CFConvNeighbors

* Update CFConv tests

* Start to integrate CFConv and CFConvNeighbors wrappers

* Integrate CFConv and CFConvNeighbors wrappers

* Get cutoff from CFConvNeighbors

* Implement the lazy inicialization of CFConv

* Pass CFConvNeigbors to CFConv::forward

* Infer numAtoms and numFilters from postions and input sizes

* Properly manage CfConv device

* Infer numGaussians

* Check the neighbors cutoff

* Implement CFConv serialization

* Simplify CFConv

* Simplify the PyTorch bindings of CFConv

* Simplify the activation setting for CFConv

* Clean up CFConv

* Remove unused imports

* Simplify CFConv tests

* Account for the GPU non-determinism in the CFConv tests

* Fix a bug in CFConv::forward

* Fix the CPU-only build

* Add doc strings

* Fix the includes

* Remove unnecesary TODOs

* Explicitly initialize shared_prt to nullptr

* Remove "using" from the header

* Fix compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ enable_testing()
 set(SRC_FILES src/ani/CpuANISymmetryFunctions.cpp
               src/ani/CudaANISymmetryFunctions.cu
               src/pytorch/BatchedNN.cpp
+              src/pytorch/CFConv.cpp
+              src/pytorch/CFConvNeighbors.cpp
               src/pytorch/SymmetryFunctions.cpp
               src/schnet/CpuCFConv.cpp
               src/schnet/CudaCFConv.cu)
@@ -47,6 +49,8 @@ endforeach()
 
 # Tests of PyTorch wrappers
 add_test(TestBatchedNN         pytest -v ${CMAKE_SOURCE_DIR}/src/pytorch/TestBatchedNN.py)
+add_test(TestCFConv            pytest -v ${CMAKE_SOURCE_DIR}/src/pytorch/TestCFConv.py)
+add_test(TestCFConvNeighbors   pytest -v ${CMAKE_SOURCE_DIR}/src/pytorch/TestCFConvNeighbors.py)
 add_test(TestEnergyShifter     pytest -v ${CMAKE_SOURCE_DIR}/src/pytorch/TestEnergyShifter.py)
 add_test(TestOptimizedTorchANI pytest -v ${CMAKE_SOURCE_DIR}/src/pytorch/TestOptimizedTorchANI.py)
 add_test(TestSpeciesConverter  pytest -v ${CMAKE_SOURCE_DIR}/src/pytorch/TestSpeciesConverter.py)
@@ -56,6 +60,8 @@ add_test(TestSymmetryFunctions pytest -v ${CMAKE_SOURCE_DIR}/src/pytorch/TestSym
 install(TARGETS ${LIBRARY} DESTINATION ${Python_SITEARCH}/${NAME})
 install(FILES src/pytorch/__init__.py
               src/pytorch/BatchedNN.py
+              src/pytorch/CFConv.py
+              src/pytorch/CFConvNeighbors.py
               src/pytorch/EnergyShifter.py
               src/pytorch/OptimizedTorchANI.py
               src/pytorch/SpeciesConverter.py
