--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,23 +15,23 @@ jobs:
         include:
           # Oldest supported versions
           - enable_cuda: true
-            cuda: 10.2.89
-            gcc: 8.5.0
-            nvcc: 10.2
-            python: 3.8
-            pytorch: 1.8.0
+            cuda: "10.2.89"
+            gcc: "8.5.0"
+            nvcc: "10.2"
+            python: "3.7"
+            pytorch: "1.11.0"
           # Latest supported versions
           - enable_cuda: true
-            cuda: 11.2.2
-            gcc: 10.3.0
-            nvcc: 11.2
-            python: 3.9
-            pytorch: 1.10.0
+            cuda: "11.2.2"
+            gcc: "10.3.0"
+            nvcc: "11.2"
+            python: "3.10"
+            pytorch: "1.11.0"
           # Without CUDA
           - enable_cuda: false
-            gcc: 10.3.0
-            python: 3.9
-            pytorch: 1.10.0
+            gcc: "10.3.0"
+            python: "3.10"
+            pytorch: "1.11.0"
 
     steps:
     - name: Check out
@@ -57,7 +57,7 @@ jobs:
         sed -i -e "/cudatoolkit/c\  - cudatoolkit ${{ matrix.cuda }}" \
                -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
                -e "/nvcc_linux-64/c\  - nvcc_linux-64 ${{ matrix.nvcc }}" \
-               -e "/python/c\  - python ${{ matrix.python }}" \
+               -e "/python/c\  - python ${{ matrix.python }}.*" \
                -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}" \
                environment.yml
 
@@ -68,7 +68,7 @@ jobs:
         sed -i -e "/cudatoolkit/c\  # - cudatoolkit" \
                -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
                -e "/nvcc_linux-64/c\  # - nvcc_linux-64" \
-               -e "/python/c\  - python ${{ matrix.python }}" \
+               -e "/python/c\  - python ${{ matrix.python }}.*" \
                -e "/pytorch-gpu/c\  - pytorch-cpu ${{ matrix.pytorch }}" \
                environment.yml
 
