--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,6 @@ dependencies:
   - nvcc_linux-64 11.2
   - torchani 2.2.2
   - pytest
-  - python 3.9
-  - pytorch-gpu 1.10.0
+  - python 3.10.*
+  - pytorch-gpu 1.11.0
   - sysroot_linux-64 2.17
