--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,15 +10,16 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     strategy:
+      fail-fast: false
       matrix:
         include:
           # Oldest supported versions
           - enable_cuda: true
             cuda: 10.2.89
-            gcc: 8.5.0
+            gcc: 7.5.0
             nvcc: 10.2
-            python: 3.8
-            pytorch: 1.8.0
+            python: 3.9
+            pytorch: 1.10
           # Latest supported versions
           - enable_cuda: true
             cuda: 10.2.89
