--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ master ]
 
+defaults:
+  run:
+    shell: bash -l {0}
+
 jobs:
   build:
     runs-on: ubuntu-18.04
@@ -51,7 +55,6 @@ jobs:
         miniforge-variant: Miniforge3
 
     - name: Prepare dependencies (with CUDA)
-      shell: bash -l {0}
       if: ${{ matrix.enable_cuda }}
       run: |
         sed -i -e "/cudatoolkit/c\  - cudatoolkit ${{ matrix.cuda }}" \
@@ -62,7 +65,6 @@ jobs:
                environment.yml
 
     - name: Prepare dependencies (without CUDA)
-      shell: bash -l {0}
       if: ${{ !matrix.enable_cuda }}
       run: |
         sed -i -e "/cudatoolkit/c\  # - cudatoolkit" \
@@ -73,21 +75,17 @@ jobs:
                environment.yml
 
     - name: Show dependency file
-      shell: bash -l {0}
       run: cat environment.yml
 
     - name: Install dependencies
-      shell: bash -l {0}
       run: conda env create -n nnpops -f environment.yml
 
     - name: List conda environment
-      shell: bash -l {0}
       run: |
         conda activate nnpops
         conda list
 
     - name: Configure, compile, and install
-      shell: bash -l {0}
       run: |
         conda activate nnpops
         mkdir build && cd build
@@ -98,7 +96,6 @@ jobs:
         make install
 
     - name: Test
-      shell: bash -l {0}
       run: |
         conda activate nnpops
         cd build
