--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,32 +5,40 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    # Run every Sunday at midnight
+    - cron:  '0 0 * * 0'
+
+defaults:
+  run:
+    shell: bash -l {0}
 
 jobs:
   build:
     runs-on: ubuntu-18.04
     strategy:
+      fail-fast: false
       matrix:
         include:
           # Oldest supported versions
           - enable_cuda: true
-            cuda: 10.2.89
-            gcc: 8.5.0
-            nvcc: 10.2
-            python: 3.8
-            pytorch: 1.8.0
+            cuda: "10.2.89"
+            gcc: "8.5.0"
+            nvcc: "10.2"
+            python: "3.7"
+            pytorch: "1.11.0"
           # Latest supported versions
           - enable_cuda: true
-            cuda: 11.2.2
-            gcc: 10.3.0
-            nvcc: 11.2
-            python: 3.9
-            pytorch: 1.10.0
+            cuda: "11.2.2"
+            gcc: "10.3.0"
+            nvcc: "11.2"
+            python: "3.10"
+            pytorch: "1.11.0"
           # Without CUDA
           - enable_cuda: false
-            gcc: 10.3.0
-            python: 3.9
-            pytorch: 1.10.0
+            gcc: "10.3.0"
+            python: "3.10"
+            pytorch: "1.11.0"
 
     steps:
     - name: Check out
@@ -50,33 +58,37 @@ jobs:
         miniforge-variant: Miniforge3
 
     - name: Prepare dependencies (with CUDA)
-      shell: bash -l {0}
       if: ${{ matrix.enable_cuda }}
       run: |
         sed -i -e "/cudatoolkit/c\  - cudatoolkit ${{ matrix.cuda }}" \
                -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
                -e "/nvcc_linux-64/c\  - nvcc_linux-64 ${{ matrix.nvcc }}" \
-               -e "/python/c\  - python ${{ matrix.python }}" \
+               -e "/python/c\  - python ${{ matrix.python }}.*" \
                -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}" \
                environment.yml
 
     - name: Prepare dependencies (without CUDA)
-      shell: bash -l {0}
       if: ${{ !matrix.enable_cuda }}
       run: |
         sed -i -e "/cudatoolkit/c\  # - cudatoolkit" \
                -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
                -e "/nvcc_linux-64/c\  # - nvcc_linux-64" \
-               -e "/python/c\  - python ${{ matrix.python }}" \
+               -e "/python/c\  - python ${{ matrix.python }}.*" \
                -e "/pytorch-gpu/c\  - pytorch-cpu ${{ matrix.pytorch }}" \
                environment.yml
 
+    - name: Show dependency file
+      run: cat environment.yml
+
     - name: Install dependencies
-      shell: bash -l {0}
       run: conda env create -n nnpops -f environment.yml
 
+    - name: List conda environment
+      run: |
+        conda activate nnpops
+        conda list
+
     - name: Configure, compile, and install
-      shell: bash -l {0}
       run: |
         conda activate nnpops
         mkdir build && cd build
@@ -87,7 +99,6 @@ jobs:
         make install
 
     - name: Test
-      shell: bash -l {0}
       run: |
         conda activate nnpops
         cd build
